--- a/week_in_review/aug_15_2020.md
+++ b/week_in_review/aug_15_2020.md
@@ -1,3 +1,28 @@
-Is this markdown? //
+# Week In Review - Template
+Optional life advise essay - https://www.lesswrong.com/posts/mXgsd5o9uuYaQKHMz/tools-for-keeping-focused?commentId=m7zZc8cW2JDPgYWqm#m7zZc8cW2JDPgYWqm
+***
+##### Habits under construction
+Calendar, writing every day, responding to emails immediately, closing tabs often
 
-or not?
+***
+##### Review of events
+* M - Traveled from STL to Nashville after wedding. Got set up in new appartment. Some banking, not much else.
+* T - 3 hours of wasted time. Not much writing. Apartment hunting.
+* W - Wrote for effective altruism forum
+* TR - 1.1 hours on microsoft word! wrote sections of PALM paper
+* F - Finished second section of PALM paper
+* S - played Rust, took it easy
+* SU - wrote this and looked for apartments
+
+***
+##### Distractions
+- Rust, LessWrong, news, Reddit, youtube
+
+***
+##### How much time did I spend on my comparative advantages this week?
+- Spent too much time on unorganizable news information. Not enough on theory and structured infor and writing.
+
+***
+##### Stress Symptoms
+None of note
+Ancious to get to school
